--- a/styles/main.css
+++ b/styles/main.css
@@ -2,6 +2,17 @@
   margin: 0;
   padding: 0;
 }
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+  12.5% {
+    transform: scale(1.05);
+  }
+  25% {
+    transform: scale(1);
+  }
+}
 h1,
 h2,
 div.chapter {
@@ -97,6 +108,8 @@ span.amphora {
   position: absolute;
   top: 100px;
   left: 70%;
+  animation: pulse 2s ease-out infinite;
+  transform-style: preserve-3d;
 }
 #preorder-cta a {
   display: block;
@@ -115,4 +128,56 @@ span.amphora {
 }
 .centered {
   text-align: center;
+}
+#close-up {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: 0;
+  background: rgba(0, 0, 0, 0.75);
+  transition: opacity 0.35s ease-in-out;
+  z-index: 100;
+}
+#close-up div.exit {
+  font-family: arial, sans-serif;
+  position: absolute;
+  top: 0;
+  right: 0;
+  color: white;
+  font-size: 40px;
+  line-height: 80px;
+  width: 80px;
+  text-align: center;
+  text-shadow: 0 0 3px black;
+  cursor: pointer;
+  z-index: 102;
+}
+#close-up div.content {
+  position: relative;
+  top: 80px;
+  width: 100%;
+  height: calc(100% - 20px * 4 * 2);
+  text-align: center;
+  overflow: hidden;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+#close-up div.navigation div {
+  position: absolute;
+  width: 50%;
+  top: 0;
+  bottom: 0;
+  cursor: pointer;
+}
+#close-up div.navigation div.prev {
+  left: 0;
+  cursor: w-resize;
+}
+#close-up div.navigation div.next {
+  right: 0;
+  cursor: e-resize;
 }
