Added ability to transcode page

--- a/styles/main.less
+++ b/styles/main.less
@@ -229,3 +229,29 @@ span.amphora {
   }
 
 }
+
+#easter-egg {
+  text-align: center;
+  opacity: 0;
+  transition: opacity 0.35s ease-in-out;
+  p {
+    margin-top: @base;
+    text-indent: 0;
+  }
+}
+
+button {
+  background: white;
+  border: 1px solid black;
+  border-radius: 0;
+  font-family: mrs-eaves, times, serif;
+  font-size: 13px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  color: black;
+  cursor: pointer;
+  height: 32px;
+  line-height: 32px;
+  padding: 0 22px;
+  text-align: center;
+}
