--- a/styles/main.css
+++ b/styles/main.css
@@ -204,3 +204,27 @@ span.amphora {
   right: 0;
   cursor: e-resize;
 }
+#easter-egg {
+  text-align: center;
+  opacity: 0;
+  transition: opacity 0.35s ease-in-out;
+}
+#easter-egg p {
+  margin-top: 10px;
+  text-indent: 0;
+}
+button {
+  background: white;
+  border: 1px solid black;
+  border-radius: 0;
+  font-family: mrs-eaves, times, serif;
+  font-size: 13px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  color: black;
+  cursor: pointer;
+  height: 32px;
+  line-height: 32px;
+  padding: 0 22px;
+  text-align: center;
+}
