--- a/styles/main.less
+++ b/styles/main.less
@@ -16,6 +16,21 @@
   }
 }
 
+@keyframes oscillate {
+  0% {
+    background: rgb(255, 50, 50);
+    // color: white;
+  }
+  50% {
+    background: white;
+    // color: black;
+  }
+  100% {
+    background: rgb(255, 50, 50);
+    // color: white;
+  }
+}
+
 h1, h2,
 div.chapter {
   padding: 0 40px;
@@ -49,6 +64,7 @@ h1, h2, h3, h4, h5, h6 {
   letter-spacing: 1px;
   text-transform: lowercase;
   text-align: center;
+  margin-top: @base;
   margin-bottom: @base;
   @media (max-width: @max-width) {
     font-size: 1em;
@@ -56,7 +72,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 p + p {
-  text-indent: @base * 6;
+  text-indent: @base * 4;
   margin-top: @base;
 }
 
@@ -242,16 +258,22 @@ span.amphora {
 
 button {
   background: white;
+  color: black;
   border: 1px solid black;
   border-radius: 0;
   font-family: mrs-eaves, times, serif;
   font-size: 13px;
   text-transform: uppercase;
   letter-spacing: 2px;
-  color: black;
   cursor: pointer;
   height: 32px;
   line-height: 32px;
   padding: 0 22px;
   text-align: center;
+  &:not(.complete) {
+    animation: oscillate 5s ease-out infinite;
+  }
+  &.transcoding {
+    animation: oscillate 0.1s ease-out infinite;
+  }
 }
